fix(docs): heading spacing stop gap solution

--- a/packages/docs-app/src/styles/_page.scss
+++ b/packages/docs-app/src/styles/_page.scss
@@ -24,7 +24,7 @@ button,
   h4,
   h5,
   h6 {
-    margin-top: 1rem;
+    margin-top: 3rem;
     margin-bottom: 1rem;
   }
 
